--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <title>Itinerario</title>
 </head>
 <body>
-    <img src="C:/Users/avbat/Downloads/itinerario.jpg" alt="" style="max-width:100%; height:auto;">
+    <img src="itinerario.jpg" alt="" style="max-width:100%; height:auto;">
+
 </body>    
